app/src/main/java/com/example/truckercore/shared/errors/InvalidPersistenceStatusException.kt
package com.example.truckercore.shared.errors

class InvalidPersistenceStatusException(message: String? = null): Exception(message)